// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<MagicLogin /> should render correctly - index 1`] = `
<div>
  <div
    class=""
  >
    <h1
      class="page-title__heading"
    >
      Logging in
    </h1>
  </div>
</div>
`;

exports[`<MagicLogin /> should render correctly with initial state 1`] = `
<div>
  <div
    class=""
  >
    <h1
      class="page-title__heading"
    >
      Logging in
    </h1>
  </div>
</div>
`;

exports[`<MagicLogin /> should render correctly with logInError 1`] = `
<div>
  <div
    class=""
  >
    <h1
      class="page-title__heading"
    >
      Logging in
    </h1>
    <span
      class="paragraph"
    >
      <span
        class="error"
      >
        Something went wrong logging you in
        <br />
        Invalid session
        <br />
        <a
          class="text-link text-link--text-link text-link--no-padding text-link--inline"
          href="/login"
        >
          Try logging in again
        </a>
      </span>
    </span>
  </div>
</div>
`;

exports[`<MagicLogin /> should render correctly with loggingIn=true 1`] = `
<div>
  <div
    class=""
  >
    <h1
      class="page-title__heading"
    >
      Logging in
    </h1>
  </div>
</div>
`;

exports[`<MagicLogin /> should render correctly with user 1`] = `
<div>
  <div
    class=""
  >
    <h1
      class="page-title__heading"
    >
      Logged in
    </h1>
    <span
      class="paragraph"
    >
      Logged in!
      <br />
      You will now be redirected to the 
      account
       page
      <br />
      <a
        class="text-link text-link--text-link text-link--no-padding text-link--inline"
        href="/account"
      >
        Not been redirected? Click here
      </a>
    </span>
  </div>
</div>
`;
